# claude-switch

./: Cargo.toml  LICENSE  README.md  go.mod  justfile
cmd/: keychain_darwin.go  keychain_other.go  main.go  oauth.go  profile.go
src/: main.rs  oauth.rs  profile.rs
