[package]
name = "claude-switch"
version = "1.0.0"
edition = "2024"
description = "Switch between multiple Claude Code accounts from the command line"
license = "ISC"
repository = "https://github.com/Global-Astro-Labs/claude-switch"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
comfy-table = "7.2.2"
home = "0.5.12"
minreq = { version = "2.14.1", features = ["https-rustls", "json-using-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
